я кароче подправил код, убрал лишние там u know) и разделил css на несколько файлов а то там чета много строк было ахахха ну я кароч вроде работает да бог завтра доделаю еще international dota 2 2023 TEAM SPIRIT и доделаю чтобы там был в группе mr admin и lame типочки))) до завтра пока пока